ensure titles are centre aligned

--- a/src/sass/components/request-perms.scss
+++ b/src/sass/components/request-perms.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 
   button {
     margin: 4rem 0 6rem;
