--- a/src/sass/components/set-nickname.scss
+++ b/src/sass/components/set-nickname.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 
   form {
     text-align: center;
